#Dto commit.
Для формирования минимально рабочего проекта:
- Работа с post переведна на dto.